Fix h2 margin on smaller screens

--- a/css/screen.scss
+++ b/css/screen.scss
@@ -62,7 +62,7 @@ h2 {
     font-size: 2.5em;
     color: $primary-color;
     text-align: center;
-    margin: 0.8em;
+    margin: 0.3em 0.8em;
 }
 
 h3 {
